<resources>
    <string name="app_name">看车玩车</string>
    <string name="home">首页</string>
    <string name="see">看车</string>
    <string name="posted">发帖</string>
    <string name="play">玩车</string>
    <string name="me">我</string>
    <string name="topic_recommend">推荐</string>
    <string name="topic_hot">热门</string>
    <string name="topic_me">我的</string>
    <string name="newest">最新</string>
    <string name="thehottest">最热</string>
    <string-array name="tag_title_values">
        <item>设置展车标签</item>
        <item>设置新车标签</item>
        <item>设置模特标签</item>
    </string-array>
    <string name="prompt_moblienum_error">请输入正确的手机号</string>
    <string name="promt_vervoice">如长时间未收到短信验证码,可点击 </string>
    <string name="prompt_moblie">手机号码</string>
    <string name="action_get_verification_code">获取验证码</string>
    <string name="action_get_verification_code2">获取验证(%1$d)</string>
    <string name="action_get_voice_vercode">如长时间未收到短信验证码,可点击接收语音验证</string>
    <string name="action_view_declaration">查看申报</string>
    <string name="action_goto_payfor">去付款</string>
    <string name="action_goback_usercenter">返回会员中心</string>
    <string name="action_sign_in">登录</string>
    <string name="action_nextstep">下一步</string>
    <string name="action_logout">退出登陆</string>
    <string name="action_submit">提交</string>
    <string name="action_submit_certificates">提交凭证</string>
    <string name="error_invalid_phone">无效手机号码</string>
    <string name="error_invalid_verification_code">验证码错误</string>
    <string name="error_field_required">请输入验证码</string>
    <string name="login_findback_pwd">找回密码</string>
    <string name="input_phonenum">请输入手机号码</string>
    <string name="phone">手机</string>
    <string name="sms_arrive">短信验证码已发送至%s</string>
    <string name="submit">确认</string>
    <string name="complete">完成</string>
    <string name="edit_longinmyinfo">完善资料</string>
    <string name="stepover">跳过</string>
    <string name="nickname">昵称</string>
    <string name="motordeail_orgs">经销商</string>
    <string name="motordeail_has_coupon">有代金券</string>
    <string name="usedcar_sellers">车主自售</string>
    <string name="popman_estimate">达人评测</string>
    <string name="reset">重置</string>
    <string name="custom_title">个人定制</string>
    <string name="confirm_btn_text">确认定制</string>
    <string name="select_brand_btn">选择品牌</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="custom_text">定制</string>
    <string name="alert_dialog_title">提示</string>
    <string name="pause">暂停</string>
    <string name="stop">结束</string>
    <string name="resume">继续</string>
    <string name="select_count_text">
    已选 %1$d/%2$d
    </string>
    <string name="ticket_desc">限用一次，入场作废</string>
    <string name="balance_tv_value">余额\t\t %1$s </string>
    <string name="fans_tv">关注 %1$d \t\t 粉丝 %2$d </string>
    <string name="exp_tv_value">积分\t\t %1$s </string>
    <string name="height_tv">身高:  \t\t%1$s</string>
    <string name="bwh_tv">三围:  \t\t%1$s</string>
    <string name="price_section">价格区间(万元)</string>
    <string name="custom_price_value">自定义价格</string>
    <string name="total_fav_values">共%1$d条记录</string>
    <string name="start_pk">开始对比</string>
    <string name="add_btn_text">添加</string>
    <string name="edit_btn_text">编辑</string>
    <string name="moto_type_pk_text">车型对比</string>
    <string name="discount_pk_text">优惠对比</string>
    <string name="select_model">选择车型</string>
    <string name="select_exhibitions">选择展会</string>
    <string name="select_series">选择车系</string>
    <string name="select_all">全选</string>
    <string name="canecl_select_all">取消全选</string>
    <string name="delete">删除</string>
    <string name="delete_prompt_msg">请选择要删除的车型！</string>
    <string name="service_rating_text">服务:\t %1$s \t\t 环境:\t %2$s</string>
    <string name="coupon_other_count_text">查看其它%1$d条代金券信息</string>
    <string name="load_more_item">查看更多</string>
    <string name="call">拨打电话</string>
    <string name="map_nav">地图导航</string>
    <string name="send_private_msg">发送私信</string>
    <string name="comment">评论</string>
    <string name="evaluation">评价</string>
    <string name="new_car_launch">新车发布</string>
    <string name="live_launching">现场发布中</string>
    <string name="ex_brand_models">品牌展会展车</string>
    <string name="goto_her_homepage">TA的主页>></string>
    <string name="photo_browser">图片浏览</string>
    <string name="tickets">票务</string>
    <string name="obtain_ticket">门票领取</string>
    <string name="china_money_char">￥</string>
    <string name="unit_value">单价:</string>
    <string name="refund_part_value">退款合计:</string>
    <string name="refund_total_value">退款总计:</string>
    <string name="qr_msg">请扫码入场</string>
    <string name="buy_ticket">购买门票</string>
    <string name="about_ticket">票务须知</string>
    <string name="about_ex">展会须知</string>
    <string name="sendsaler">发给员工\n(分发)</string>
    <string name="sendorg">发给机构\n(分发)</string>
    <string name="hidden_same_item">配置项</string>
    <string name="discount_item">经销商</string>
    <string name="min_discount_item">最低优惠价</string>
    <string name="appear_same_item">显示相同</string>
    <string name="more_filter">更多筛选</string>
    <string name="confirm_order">确认订单</string>
    <string name="ticket_limit_desc">每人限领%1$d张</string>
    <string name="salesperosn_desc">
    粉丝    %1$d   |   关注   %2$d</string>
    <string name="limit_bottom_text">--------------------  别想突破我的底线  --------------------</string>
    <string name="custom">定制</string>
    <string name="subscribed">已定制</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_failure">支付失败</string>
    <string name="reply_msg"><Data><![CDATA[<font color="#4e81ba">%1$s</font>回复<font color="#4e81ba">%2$s</font>:%3$s]]> </Data></string>
    <string name="replymore_msg"><Data><![CDATA[回复<font color="#4e81ba">%1$s</font>:%2$s]]> </Data></string>
    <string name="certificate_type_title">%1$s预登计</string>
    <string name="professional_visitor">专业观众</string>
    <string name="professional_buyer">专业买家</string>
    <string name="cert_current_record">今日使用%1$s/%2$s</string>
    <string name="cert_total_record">累积使用%1$d次</string>
    <string name="cert_print_desc"></string>
    <string name="cert_current_record2">使用%1$s/%2$s</string>
    <string name="cert_expire_propmt">有效期:%1$s;%2$s次\n一人一证，非本人持有无效</string>
    <string name="certName">姓名  %1$s</string>
    <string name="certCompany">公司  %1$s</string>
    <string name="cert_auditing">您有一张证件待审核，请耐心等待\n或致电023-56789999查询</string>
    <string name="cert_no_pass">您的证件申请未通过</string>
    <string name="loss_desc">确认要挂失条形编码为【%1$s】的纸质证件?</string>
    <string name="config_item_value">%1$s:  %2$s</string>
    <string name="user_topic_tag">他发表了%1$s条宝贝信息</string>
    <string name="pre_ticket_desc">请如实填写以下信息,其中*为必填项。</string>
    <string name="pre_cert_desc">请如实填写以下信息,其中*为必填项。</string>
    <string name="ticket_apply_msg1">您已经提交了预报名，请耐心等待审核</string>
    <string name="ticket_apply_msg2">您提交的预报名未通过审核！\n失败原因:%1$s</string>
    <string name="ticket_forward_desc">1、每票只能转送1次\n2、转送成功后不可收回\n3、若转送对象已领赠票超出领取限制，则转送不成功\n4、已核销使用或已过期门票不可转送</string>
    <string name="total_records">共%1$s条记录</string>
    <string name="matches_values">共%1$s车系%2$s车型</string>
    <string name="price_desc">厂商指导价\t %1$s</string>
    <string name="price_max">200+</string>
    <string name="color_tag1">外观\t %1$s</string>
    <string name="color_tag2">内饰\t %1$s</string>
    <string name="driving">开车去</string>
    <string name="please">请你玩</string>
    <string name="apply">报名列表</string>
    <string name="myapply">我要报名</string>
    <string name="share">活动精彩分享</string>
    <string name="sponsordriv">发起开车去</string>
    <string name="sponsorplease">发起请你玩</string>
    <string name="mytopic">我的话题</string>
    <string name="havefun">玩得爽</string>
    <string name="topicmanage">话题管理</string>
    <string name="topicfound">创建话题</string>
    <string name="messagecenter">消息中心</string>
    <string name="signin">路线签到</string>
    <string name="qrcodesignin">站点二维码</string>
    <string name="integralinquire">积分查询</string>
    <string name="regulation">规则</string>
    <string name="storebelow">店内展车</string>
    <string name="storeexhibition">展会展车</string>
    <string name="sponsorstorebelow">拍店内展车</string>
    <string name="sponsorstoreexhibition">拍展会展车</string>
    <string name="dynamicdetails">动态详情</string>
    <string name="ride_run_prompt_msg1">本次驾途不足1公里，结束后不计\n入驾途数据，确定结束此次驾途？</string>
    <string name="ride_run_prompt_msg2">结束本次驾途,\n
还是途径点暂停？</string>
    <string name="add_customer_notes">注：商务关注用户仅您自己，以及您所在单位后台相关授权用户可见！</string>
    <string name="decrypt_hint">啊哦，来晚一步，该用户已经被其他销售/工作人员抢跑了</string>
    <string name="ride_run_prompt_msg3">结束本次驾途
?</string>
    <string name="refoud_numtitle"><Data>有%1$s张可退款 </Data></string>
    <string name="ride_run_prompt_msg4">您有未结束的行驶轨迹，您想结束运行，还是继续运行？
</string>
    <string name="ride_run_prompt_msg5">您是否将当前行驶数据添加到途经点？
</string>
    <string name="goout_stop">离开,并结束</string>
    <string name="goout_resume">离开,但继续</string>
    <string name="ticket_refund_desc">若产生退款，已抵扣使用的代金券不退还\n如退款中遇到问题，请联系我们</string>
    <string name="ticket_refund_desc2">

       赠送门票不可买卖、转让
    </string>
    <string name="nearattr_sellect_empty">附近尚无 “%1$s” 类型商家入驻平台\n平台入驻电话：42650780  </string>
    <string name="app_slogon">IM as a service</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="recall">Recall</string>
    <string name="msg_recall_by_self">This message has been recall by me</string>
    <string name="msg_recall_by_user">This message has been recalled by %1$s</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="search_contanier">Search："%s"</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="stop_record">Stop record</string>
    <string name="switch_camera">Switch camera</string>
    <string name="capture_image">Capture image</string>
</resources>