<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_layout_bg_color"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/style_bg1">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_more" />

        <TextView
            android:id="@+id/title_bar_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/moto_type_pk_text"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_title" />

        <TextView
            android:id="@+id/selectAll"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/select_all"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_more" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_layout"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/list"
            android:background="@color/style_bg1">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_more" />

                <TextView
                    android:id="@+id/resetBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_more"
                    />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>