<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height">

        <TextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/select_count_text" />

        <TextView
            android:id="@+id/title_bar_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/select_brand_btn"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_size_title" />

        <TextView
            android:id="@+id/title_function_btn"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/text_def"
            android:textSize="@dimen/font_size_more" />
    </RelativeLayout>

    <include
        android:id="@+id/brandsLayout"
        layout="@layout/common_brand_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>