<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.FindBackPWDActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/app_layout_bg_color"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/titleBar"
                layout="@layout/titlebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_row_height"
                android:background="@color/app_layout_bg_color"
                android:gravity="center_vertical"
                android:text="@string/input_phonenum"
                android:textColor="@color/tab_text_n_color"
                android:textSize="@dimen/font_size_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_item_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/common_left_margin"
                android:layout_marginRight="@dimen/common_right_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vercode_labeltv"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:text="@string/phone"
                    android:textSize="@dimen/font_size_title" />

                <EditText
                    android:id="@+id/editmyinfo_nickname_ed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="13368246591"
                    android:textSize="@dimen/font_size_title" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/common_left_margin"
                android:layout_marginRight="@dimen/common_right_margin"
                android:background="@color/color_login_devide" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_left_margin"
                android:layout_marginRight="@dimen/common_right_margin"
                android:layout_marginTop="@dimen/common_item_height"
                android:background="@color/btn_color1"
                android:text="@string/action_nextstep"
                android:textColor="@color/transparent90_white"
                android:textSize="@dimen/font_size_huge"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</merge>
